Prevent clipping of the column menu

--- a/wagtail/contrib/typed_table_block/static_src/typed_table_block/scss/typed_table_block.scss
+++ b/wagtail/contrib/typed_table_block/static_src/typed_table_block/scss/typed_table_block.scss
@@ -66,6 +66,5 @@
 
     .control-cell ul.add-column-menu {
         top: 0;
-        left: -5em;
     }
 }
